# project_structure

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .pre-commit-config.yaml  README.md  pyproject.toml
