[tool.poetry]
name = "search_app"
version = "0.1.0"
description = ""
authors = ["Yu-Hsuan <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.65.2"
uvicorn = "^0.13.4"
pandas = "^1.3.3"
logging = "^0.4.9.6"
structlog = "^24.1.0"
pyspellchecker = "^0.7.3"
python-dotenv = "^1.0.0"
elasticsearch = "^8.11.1"
vertexai = "^0.0.1"
google-cloud-aiplatform = "^1.39.0"
ujson = "^5.9.0"
langchain-community = "^0.0.14"
transformers = "^4.37.0"
langchain = "^0.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
